k8s/production/gitlab/pod-cleanup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitlab-runner-pod-cleanup
  namespace: gitlab
spec:
  restartPolicy: Always
  serviceAccountName: pod-cleanup-sa
  containers:
    - name: gitlab-runner-pod-cleanup
      image: registry.gitlab.com/gitlab-org/ci-cd/gitlab-runner-pod-cleanup:latest
      resources:
        requests:
          cpu: 20m
          memory: 300M
        limits:
          cpu: 1000m
          memory: 2G
