k8s/production/gitlab/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webservice-default
  namespace: gitlab
spec:
  parentRefs:
    - name: spack-gateway
      namespace: gateway-api
  hostnames:
    - gitlab.spack.io
  rules:
    # Serve our own robots.txt directly from the ALB instead of GitLab's default.
    - matches:
        - path:
            type: Exact
            value: /robots.txt
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.k8s.aws
            kind: ListenerRuleConfiguration
            name: gitlab-robots-txt
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-webservice-default
          port: 8181  # Point to the gitlab-workhorse port
